--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "resend/resend-laravel": "^0.14.0",
         "stripe/stripe-php": "^13.9"
     },
     "require-dev": {
